Funcionamento do cadastro e do login e outras correcoes

--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,22 @@
 <head>
-  <base href="/">
-  <title>Mentorias - Agripa Innovation Labs </title>
+    <base href="/">
+    <title>Mentorias - Agripa Innovation Labs </title>
 </head>
 <body>
+    <div class="container-fluid">
+        <div ng-app="mentorias">
 
-<div ng-app="mentorias">
 
+            <div class="navbar-right navbar-text">
+                <md-button ng-href="/login" ng-hide="$root.currentUser">Entrar</md-button>
+                <md-button ng-href="/cadastroPerfil" ng-hide="$root.currentUser">Registrar</md-button>
 
-<div class="navbar-right navbar-text">
-    <md-button ng-href="/login" ng-hide="$root.currentUser">Entrar</md-button>
-    <md-button ng-href="/cadastroPerfil" ng-hide="$root.currentUser">Registrar</md-button>
-    <div ng-show="$root.currentUser">{{ $root.currentUser }}</div>
-    <md-button ng-href="/logout" ng-show="$root.currentUser">Sair</md-button>
-</div>
-  <div ui-view></div>
-</div>
-
+                <md-button ng-href="/logout" ng-show="$root.currentUser">Sair</md-button>
+                {{#if currentUser}}
+                    <p>{{currentUser.profile.name}}</p>
+                {{/if}}
+            </div>
+            <div ui-view></div>
+        </div>
+    </div>
 </body>
