--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,11 @@
                 <a class="button" href="/meuPerfil"> Meu Perfil</a>
                 <a class="button" href="#"> Empresas</a> <!--precisamos da tela :/ -->
                 <a class="button" href="#"> Trajetórias</a>
-                <a class="button" href="#"><i class="fa fa-gear" ></i></a> <!--G is for gear button-->
-                <a href="/logout" class="button"><i class="fa fa-power-off" ></i></a> <!-- for logout apparently-->
+                <a class="button" href="#"><i class="fa fa-gear" style="font-size: 1.44em;" ></i></a> <!--G is for gear button-->
+                <a href="/logout" class="button"><i class="fa fa-power-off" style="font-size: 1.44em;" ></i></a> <!-- for logout apparently-->
 
                   <input style="width:180px; margin-left:180px;" type="text" placeholder="Pesquisar">
-                  <a class="button" src="#"><i class="fa fa-search"></i></a><!--P for pesquisar-->
+                  <a class="button" src="#"><i class="fa fa-search" style="font-size: 1.44em;"></i></a><!--P for pesquisar-->
             </div>
 
         {{/if}}
