- Commit para enhancement da tela de login, issue #23. Mudei algumas coisas no css, não se preocupe se afetar outras partes do site.

--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
                   <p>{{currentUser.profile.name}}</p>
               {{/if}}
           </div> -->
-          <div ui-view class="col-md-12 no-=padding"></div>
+          <div ui-view class="row"></div>
       </div>
   </div>
 </body>
