--- a/client/index.html
+++ b/client/index.html
@@ -27,11 +27,13 @@
                 </div>
 
                 <div class="col-lg-3 col-xs-12 col-md-3  no-padding">
-                  <div class="col-md-11 col-xs-11 no-padding">
+                  <div class="col-md-10 col-xs-10 no-padding">
                     <input type="text" placeholder="Pesquisar" class="pesquisar">   
                   </div>  
-                  <div class="col-md-1 no-padding">
-                    <a class="button btn-pesquisar" src="#"><i class="fa fa-search" style="font-size: 1.44em;"></i></a><!--P for pesquisar-->    
+                  <div class="col-md-2 no-padding">
+                    <a class="button btn-pesquisar" src="#">
+                      <i class="fa fa-search" style="font-size: 1.44em;"></i>
+                    </a><!--P for pesquisar-->    
                   </div>
                 </div>
             </div>
@@ -45,7 +47,7 @@
                   <p>{{currentUser.profile.name}}</p>
               {{/if}}
           </div> -->
-          <div ui-view class="col-md-12 no-=padding"></div>
+          <div ui-view class="col-md-12 no-padding"></div>
       </div>
   </div>
 </body>
