--- a/client/index.html
+++ b/client/index.html
@@ -11,33 +11,7 @@
         ser inserido utilizando as directive(?) do meteor
         muitas melhorias podem ser feitas
         -->
-        <div class="row">
-             <div id="menu" class="container col-md-12" layout="row" layout-align="center start" layout-padding style="margin-top: 60px;">
-                
-              <div class=" col-lg-3 col-md-3 col-xs-12">
-                  <img src="/resources/Logo-Agripa.png"  class="agripa-brand">
-                </div>
-                
-                <div class="col-lg-6 col-md-6 col-xs-12 ">
-                  <a class="btn btn-default" href="/meuPerfil"> Meu Perfil</a>
-                  <a class="btn btn-default" href="#"> Empresas</a> <!--precisamos da tela :/ -->
-                  <a class="btn btn-default" href="#"> Trajetórias</a>
-                  <a class="btn btn-default" href="#"><i class="fa fa-gear" style="font-size: 1.44em;" ></i></a> <!--G is for gear button-->
-                  <a href="/logout" class="btn btn-default"><i class="fa fa-power-off" style="font-size: 1.44em;" ></i></a> <!-- for logout apparently-->
-                </div>
-
-                <div class="col-lg-3 col-xs-12 col-md-3  no-padding">
-                  <div class="col-md-10 col-xs-10 no-padding">
-                    <input type="text" placeholder="Pesquisar" class="pesquisar">   
-                  </div>  
-                  <div class="col-md-2 no-padding">
-                    <a class="button btn-pesquisar" src="#">
-                      <i class="fa fa-search" style="font-size: 1.44em;"></i>
-                    </a><!--P for pesquisar-->    
-                  </div>
-                </div>
-            </div>
-        </div>
+        {{>nav}}
         {{/if}}
           <!--<div class="navbar-right navbar-text">
               <md-button ng-href="/login" ng-hide="$root.currentUser">Entrar</md-button>
