--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
         muitas melhorias podem ser feitas
         -->
         <div class="row">
-             <div id="menu" class="container col-md-12" layout="row" layout-align="center start" layout-padding style="margin-top: 60px;">
+             <div id="menu" class="container col-md-12">
                 
               <div class=" col-lg-3 col-md-3 col-xs-12">
                   <img src="/resources/Logo-Agripa.png"  class="agripa-brand">
