- Commit ligado a issue #17.

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,9 @@
 <head>
     <base href="/">
     <title>Mentorias - Agripa Innovation Labs </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8">
 </head>
 <body>
   <div class="container no-padding">
