- Severas modificações, este commit é mais para alinhar com o da galera.

--- a/client/barra-controle.html
+++ b/client/barra-controle.html
@@ -1,7 +1,7 @@
 <div class="row" id="barra-controle">
     <div class="col-md-5 col-xs-12 no-padding">
         <div class="col-xs-6 profile-boxes border-white no-padding" style="display: inline-flex;">
-            <img style="max-height: 152;" src="{{$root.currentUser.profile.profilePic.getFileRecord().url()}}" class="img-responsive"/>
+            <img style="max-height: 152px;" src="{{$root.currentUser.profile.profilePic.getFileRecord().url()}}" class="img-responsive"/>
         </div>
 
         <div class="col-xs-6 profile-boxes border-white profile">
