--- a/client/barra-controle.html
+++ b/client/barra-controle.html
@@ -92,7 +92,7 @@
             <p>
                 <button class="btn btn-default profile-actions">
                     <span class="legenda"><i class="fa fa-commenting-o"></i> <span class="hidden-xs">Mensagens</span></span>
-                    <span class="numero">{{$root.currentUser.profile.requisicoes.length}}</span>
+                    <span class="numero"></span>
                 </button>
             </p>
             <p>
@@ -104,7 +104,7 @@
             <p>
                 <button class="btn btn-default profile-actions">
                     <span class="legenda"><i class="fa fa-group"></i> <span class="hidden-xs">Ações de mentoria</span></span>
-                    <span class="numero">2</span>
+                    <span class="numero">{{$root.currentUser.profile.requisicoes.length}}</span>
                 </button>
             </p>
         </div>
