--- a/client/nav.html
+++ b/client/nav.html
@@ -12,15 +12,15 @@
                 <a class="btn btn-default" href="/trajetoria-de-desenvolvimento"> Trajetórias</a>
                 <a class="btn btn-default" href="/painel-controle"><i class="fa fa-gear" style="font-size: 1.20em;"></i></a> <!--G is for gear button-->
                 <a href="/logout" class="btn btn-default"><i class="fa fa-power-off" style="font-size: 1.20em;"></i></a> <!-- for logout apparently-->
-                {{> loginButtons}}
+
             </div>
 
             <div class="col-sm-3 col-xs-12 no-padding" style="margin-top: 18px;">
                 <div class="col-xs-10 no-padding">
-                    <input type="text" placeholder="Pesquisar" class="pesquisar" id="pesquisar">
+                    <input type="text" placeholder="Pesquisar" class="pesquisar" id="pesquisar" ng-model="query">
                 </div>
                 <div class="col-xs-2 no-padding" style="margin-left: -2px;">
-                    <a class="button btn-pesquisar" ng-click="window.open('/pesquisar/')" href=""><i class="fa fa-search" style="font-size: 1.40em;"></i></a><!--P for pesquisar-->
+                    <a class="button btn-pesquisar" ng-click="window.open('/pesquisar/{{query}}')" href=""><i class="fa fa-search" style="font-size: 1.40em;"></i></a><!--P for pesquisar-->
                 </div>
             </div>
         </div>
