--- a/client/nav.html
+++ b/client/nav.html
@@ -13,15 +13,17 @@
                 <a class="btn btn-default" href="/painel-controle"><i class="fa fa-gear" style="font-size: 1.20em;"></i></a> <!--G is for gear button-->
                 <a href="/logout" class="btn btn-default"><i class="fa fa-power-off" style="font-size: 1.20em;"></i></a> <!-- for logout apparently-->
             </div>
-
-            <div class="col-sm-3 col-xs-12 no-padding" style="margin-top: 18px;">
-                <div class="col-xs-10 no-padding">
-                    <input type="text" placeholder="Pesquisar" class="pesquisar" id="pesquisar" ng-model="query">
-                </div>
-                <div class="col-xs-2 no-padding" style="margin-left: -2px;">
-                    <a class="button btn-pesquisar" ng-click="window.open('/pesquisar/{{query}}')" href=""><i class="fa fa-search" style="font-size: 1.40em;"></i></a><!--P for pesquisar-->
-                </div>
-            </div>
+            <form ng-submit="pesquisa()">
+              <div class="col-sm-3 col-xs-12 no-padding" style="margin-top: 18px;">
+                  <div class="col-xs-10 no-padding">
+                      <input type="text" placeholder="Pesquisar" class="pesquisar" id="pesquisar" ng-model="query">
+                  </div>
+                  <div class="col-xs-2 no-padding" style="margin-left: -2px;">
+                      <button type="submit" class="button btn-pesquisar">
+                      <i class="fa fa-search" style="font-size: 1.40em;"></i></button><!--P for pesquisar-->
+                  </div>
+              </div>
+            </form>
         </div>
     </div>
 </div>
